--- a/API_PostgreSQL/appsettings.json
+++ b/API_PostgreSQL/appsettings.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "PostgreSQLConnection" : "Server=   ;Port=5432;Database=NutriTEC-DB;User Id=postgres;Password=1234;"
-  }
+  "AllowedHosts": "*"
 }
