--- a/API_MongoDB/appsettings.json
+++ b/API_MongoDB/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "NutriTEC-DataBase": {
+    "ConnectionString":"mongodb://localhost:27017",
+    "DataBaseName":"NutriTEC-DB",
+    "CollectionName":"Nutritionist"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
