--- a/.github/workflows/main_postgresqlapi.yml
+++ b/.github/workflows/main_postgresqlapi.yml
@@ -21,11 +21,14 @@ jobs:
         with:
           dotnet-version: '7.x'
           include-prerelease: true
-
+          
+      
       - name: Build with dotnet
+        working-directory: ../API_PostgreSQL
         run: dotnet build --configuration Release
 
       - name: dotnet publish
+        working-directory: ../API_PostgreSQL
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
