--- a/.github/workflows/main_postgresqlapi.yml
+++ b/.github/workflows/main_postgresqlapi.yml
@@ -57,4 +57,4 @@ jobs:
           app-name: 'PostgreSQLAPI'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_242AFDB70BCD4652AAE92FB15CA6D676 }}
-          package: API_PostgreSQL
+          package: .
