--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -22,6 +22,7 @@
     "@types/spotify-web-api-js": "^0.21.0",
     "html2pdf.js": "^0.10.1",
     "jspdf": "^2.5.1",
+    "ngx-spinner": "^16.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
