--- a/MovilApp/NutriTec/app/src/main/AndroidManifest.xml
+++ b/MovilApp/NutriTec/app/src/main/AndroidManifest.xml
@@ -31,6 +31,18 @@
             android:name=".MenuActivity"
             android:exported="true">
         </activity>
+        <activity
+            android:name=".DeleteActivity"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".editRecipeActivity"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".seeRecipeActivity"
+            android:exported="true">
+        </activity>
     </application>
 
 </manifest>
